# ultar

./: .dockerignore  .gitignore  .luarc.json  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  LICENSE  README.md  TODOS.md  XevOstream.zig  build.zig  build.zig.zon  concurrent_ring.zig  dataloader.zig  docker-compose.caddy.yml  docker-compose.tailscale.yml  indexer.zig  lua_dataloader.zig  lua_rt.zig  msgpack.zig  octal.zig  pixi.toml  scanners.zig  tardefs.zig  tests.zig
.cursor/rules/: zig-docs-first.mdc
.github/workflows/: ci.yml  docker-build.yml
demo/: app.py  run_index.sbatch
docs/plans/: 2026-03-24-limited-abi-remediation.md
example/: benchmark_imagenet_metadata.py  load_imagenet_metadata_filtered.py  metadata_resolution_filter.lua  pyproject.toml
examples/: loader_rules.lua  loader_rules.luau  lua_loader.py
lua-types/ultar/: loader.lua  scandir.lua  utix.lua
python/: .gitignore  README.md  pyproject.toml  python.zig  setup.py
python/src/ultar_dataloader/: __init__.py  _native.pyi  cli.py
python/tests/: .luarc.json  loader_script.lua  test_dataloader.py  test_indexer_metadata.py  test_limited_abi.py  test_lua_dump.py
scripts/: benchmark_imagenet_metadata.sh
ultar_httpd/: App.zig  IndexerWorker.zig  TemplateCache.zig  build.zig  encodings.zig  handlers.zig  main.zig  mime.zig  mustach_render.zig
ultar_httpd/preview/: image.zig  json.zig
ultar_httpd/static/: app.js  hljs-json.js  style.css
ultar_httpd/templates/: base.html  boxed_file.html  file_list.html  load_table.html
ultar_httpd/templates/boxed/: audio.html  image.html  json.html  other.html  text.html  video.html
