[project]
name = "ultar-dataloader"
dynamic = ["version"]
description = "Fast async dataloader implemented in Zig with Lua scripting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["torch>=2.0", "pytest>=7.0"]

[project.scripts]
ultar-dataloader = "ultar_dataloader.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ultar_dataloader._version.__version__"}

[tool.setuptools]
packages = ["ultar_dataloader"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ultar_dataloader = ["*.so", "*.dylib", "*.pyd", "*.dll", "*.pyi", "py.typed", "lua-types/**/*.lua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
